--- a/src/pages/chat/chat.hbs
+++ b/src/pages/chat/chat.hbs
@@ -9,6 +9,22 @@
                 <button type="submit"><img src="{{ img.[search.svg] }}" alt=""></button>
             </div>
         </div>
+        <div class="chatlist-items">
+            {{> chat-item}}
+            {{> chat-item}}
+            {{> chat-item}}
+            {{> chat-item}}
+            {{> chat-item}}
+            {{> chat-item}}
+            {{> chat-item}}
+            {{> chat-item}}
+            {{> chat-item}}
+            {{> chat-item}}
+            {{> chat-item}}
+            {{> chat-item}}
+            {{> chat-item}}
+            {{> chat-item}}
+        </div>
     </div>
     <div class="main-column">
 
