--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -1,2 +1,3 @@
-@import "button/button.scss";
-@import "form-group/form-group.scss"
+@import "./button/button.scss";
+@import "./form-group/form-group.scss";
+@import "./chat-item/chat-item.scss";
