--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -1,3 +1,3 @@
 @import "./button/button.scss";
 @import "./form-group/form-group.scss";
-@import "./chat-item/chat-item.scss";
+@import "./chatlist-item/chatlist-item.scss";
