--- a/src/pages/chat/chat.scss
+++ b/src/pages/chat/chat.scss
@@ -1,11 +1,15 @@
 .main-columns {
     display: flex;
-
+    height: 100%;
 }
 .chatlist-column {
     width: 400px;
     background-color: #fbfbfb;
     padding: 8px;
+    height: 100%;
+    overflow: visible;
+    display: flex;
+    flex-direction: column;
 }
 .sidebar {
 }
@@ -56,7 +60,121 @@
     // padding-bottom: 12px;
     display: flex;
     flex-direction: column;
+    height: 100%;
+    flex-shrink: 1;
+    overflow-y: scroll;
+
+}
+
+.chat-column {
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    flex-shrink: 1;
+}
+
+.chat-header {
+    display: flex;
+    border-bottom: 2px solid #efefef;
+    padding-bottom: 12px;
+}
+.chat-info {
+    display: flex;
+    align-items: center;
+    // padding-top: 12px;
+    
+    gap: 20px;
     
 }
-.main-column {
+.chat-info-img {
+    width: 60px;
+    height: 60px;
+    background-color: #efefef;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    & img {
+        max-width: 50%;
+        max-height: 50%;
+    }
+}
+.chat-info-main {
+
+}
+.chat-utils {
+}
+.chat-wrapper {
+    height: 100%;
+    flex-shrink: 1;
+    padding: 12px;
+}
+.chat-body {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    gap: 14px;
+    height: 100%;
+}
+.chat-date {
+    background-color: #efefef;
+    align-self: center;
+    padding: 4px 14px;
+    border-radius: 30px;
+}
+.chat-message {
+    background-color: #efefef;
+    align-self: flex-start;
+    border-radius: 10px;
+    max-width: 80%;
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    gap: 6px;
+    &.owner {
+        align-self: flex-end;
+    }
+}
+.chat-message-text {
+}
+
+.chat-message-date {
+    font-size: 12px;
+    align-self: flex-end;
+}
+.chat-message-image {
+}
+.chat-input {
+    padding-top: 12px;
+    border-top: 2px solid #efefef;
+    width: 100%;
+    display: flex;
+    & form {
+        width: 100%;
+        display: flex;
+        align-items: center;
+        gap: 30px;
+        margin-bottom: 0;
+    }
+}
+.chat-input-attach {
+    cursor: pointer;
+}
+.chat-input-field {
+    width: 100%;
+    flex-shrink: 1;
+}
+.chat-send {
+    background: none;
+    background-color: #3494fbce;
+    border: none;
+    border-radius: 50%;
+    width: 30px;
+    height: 30px;
+    transition: .3s;
+    cursor: pointer;
+    &:hover {
+        background-color: #3494fb;
+    }
 }
