--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -32,3 +32,5 @@ body {
 }
 @import './auth/auth.scss';
 @import './chat/chat.scss';
+@import './error/error.scss';
+@import './profile/profile.scss';
