--- a/src/pages/auth/auth.hbs
+++ b/src/pages/auth/auth.hbs
@@ -1,5 +1,5 @@
-<div class="form-wrapper">
-        
+<main>
+    <div class="form-wrapper">
         <form action="" class="form">
             <div class="form-title">
                 Вход
@@ -7,9 +7,9 @@
             {{> form-group type="text" title="Логин" name="login"}}
             {{> form-group type="password" title="Пароль" name="password"}}
             <div class="form-buttons">
-                {{> button name="Вход" link="/chat/"}}
-                {{> button name="Нет аккаунта?" link="/register/"}}
+                {{> button-link name="Вход" link="/chat/"}}
+                {{> button-link name="Нет аккаунта?" link="/register/"}}
             </div>
         </form>
-    
-</div>
+    </div>
+</main>
