--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -1,3 +1,3 @@
-@import "./button/button.scss";
+@import "./button-link/button-link.scss";
 @import "./form-group/form-group.scss";
 @import "./chatlist-item/chatlist-item.scss";
