change to components

--- a/src/components/form-group/form-group.hbs
+++ b/src/components/form-group/form-group.hbs
@@ -2,6 +2,9 @@
     <div class="form-group-title">
         {{title}}
     </div>
-    <input type="{{type}}" name="{{name}}">
+    {{#if error}}
+        <div class="form-group-error">{{error}}</div>
+    {{/if}}
     
+    {{{input}}}
 </div>
