--- a/src/pages/auth/auth.hbs
+++ b/src/pages/auth/auth.hbs
@@ -4,11 +4,11 @@
             <div class="form-title">
                 Вход
             </div>
-            {{> form-group type="text" title="Логин" name="login"}}
-            {{> form-group type="password" title="Пароль" name="password"}}
+            {{{inputLogin}}}
+            {{{inputPassword}}}
             <div class="form-buttons">
-                {{> button-link name="Вход" link="/chat/"}}
-                {{> button-link name="Нет аккаунта?" link="/register/"}}
+                {{{buttonLogin}}}
+                {{{buttonRegister}}}
             </div>
         </form>
     </div>
