--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -22,6 +22,7 @@ body {
     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.2);
     border-radius: 6px;
     gap: 20px;
+    width: 400px;
 }
 .form-title {
     font-size: 24px;
