--- a/src/pages/register/register.hbs
+++ b/src/pages/register/register.hbs
@@ -4,15 +4,23 @@
             <div class="form-title">
                 Регистрация    
             </div>
-            {{> form-group type="text" title="Имя" name="first_name"}}
+            {{{inputFirstName}}}
+            {{{inputSecondName}}}
+            {{{inputLogin}}}
+            {{{inputEmail}}}
+            {{{inputPassword}}}
+            {{{inputPhone}}}
+            {{!-- {{> form-group type="text" title="Имя" name="first_name"}}
             {{> form-group type="text" title="Фамилия" name="second_name"}}
             {{> form-group type="text" title="Логин" name="login"}}
             {{> form-group type="text" title="Почта" name="email"}}
             {{> form-group type="password" title="Пароль" name="password"}}
-            {{> form-group type="tel" title="Телефон" name="phone"}}
+            {{> form-group type="tel" title="Телефон" name="phone"}} --}}
             <div class="form-buttons">
-                {{> button-link name="Регистрация" link="/chat/"}}
-                {{> button-link name="Войти" link="/auth/"}}
+                {{{buttonRegister}}}
+                {{{buttonAuth}}}
+                {{!-- {{> button-link name="Регистрация" link="/chat/"}}
+                {{> button-link name="Войти" link="/auth/"}} --}}
             </div>
         </form>
     </div>
