--- a/src/components/chatlist-item/chatlist-item.hbs
+++ b/src/components/chatlist-item/chatlist-item.hbs
@@ -1,22 +1,22 @@
 <div class="chatlist-item">
     <div class="chatlist-item-cols">
         <div class="chatlist-item-image">
-            <img src="{{ img.[profile.svg] }}" alt="">
+            <img src="{{img}}" alt="">
         </div>
         <div class="chatlist-item-info">
             <div class="chatlist-item-name">
-                Андрей
+                {{name}}
             </div>
             <div class="chatlist-item-msg">
-                Изображение
+                {{message}}
             </div>
         </div>
         
         <div class="chatlist-item-msg-time">
-            10:49
+            {{time}}
         </div>
         <div class="chatlist-item-msg-count">
-            2
+            {{count}}
         </div>
     </div>
 </div>
