--- a/src/pages/auth/auth.hbs
+++ b/src/pages/auth/auth.hbs
@@ -1,6 +1,6 @@
 <main>
     <div class="form-wrapper">
-        <form action="" class="form">
+        <form id="auth" action="" class="form">
             <div class="form-title">
                 Вход
             </div>
@@ -9,6 +9,7 @@
             <div class="form-buttons">
                 {{{buttonLogin}}}
                 {{{buttonRegister}}}
+               
             </div>
         </form>
     </div>
