--- a/src/pages/chat/chat.hbs
+++ b/src/pages/chat/chat.hbs
@@ -11,20 +11,7 @@
                 </div>
             </div>
             <div class="chatlist-items">
-                {{> chat-item}}
-                {{> chat-item}}
-                {{> chat-item}}
-                {{> chat-item}}
-                {{> chat-item}}
-                {{> chat-item}}
-                {{> chat-item}}
-                {{> chat-item}}
-                {{> chat-item}}
-                {{> chat-item}}
-                {{> chat-item}}
-                {{> chat-item}}
-                {{> chat-item}}
-                {{> chat-item}}
+                {{{chatItems}}}
             </div>
         </div>
         <div class="main-column chat-column">
@@ -93,8 +80,8 @@
                     <div class="chat-input-attach">
                         <img src="{{ img.[attachment.svg] }}" alt="">
                     </div>
-                    <input type="text" class="chat-input-field">
-                    <button class="chat-send"><img src="{{img.[chat-send.svg]}}" alt=""></button>
+                    {{{chatInput}}}
+                    {{{chatSend}}}
                 </form>
                 
 
