--- a/src/pages/profile/edit/index.hbs
+++ b/src/pages/profile/edit/index.hbs
@@ -12,7 +12,7 @@
                             Почта
                         </div>
                         <div class="profile-field-value">
-                            <input type="text" name="email">
+                            {{{inputEmail}}}
                         </div>
                     </div>
                     <div class="profile-field">
@@ -20,7 +20,7 @@
                             Логин
                         </div>
                         <div class="profile-field-value">
-                            <input type="text" name="login">
+                            {{{inputLogin}}}
                         </div>
                     </div>
                     <div class="profile-field">
@@ -28,7 +28,7 @@
                             Имя
                         </div>
                         <div class="profile-field-value">
-                            <input type="text" name="first_name">
+                            {{{inputFirstName}}}
                         </div>
                     </div>
                     <div class="profile-field">
@@ -36,7 +36,7 @@
                             Фамилия
                         </div>
                         <div class="profile-field-value">
-                            <input type="text" name="second_name">
+                            {{{inputSecondName}}}
                         </div>
                     </div>
                     <div class="profile-field">
@@ -44,7 +44,7 @@
                             Имя в чате
                         </div>
                         <div class="profile-field-value">
-                            <input type="text" name="display_name">
+                            {{{inputDisplayName}}}
                         </div>
                     </div>
                     <div class="profile-field">
@@ -52,13 +52,13 @@
                             Телефон
                         </div>
                         <div class="profile-field-value">
-                            <input type="tel" name="phone">
+                            {{{inputPhone}}}
                         </div>
                     </div>
                     
                 </div>
                 <div class="profile-buttons">
-                    {{> button-link link="/profile/" name="Сохранить" }}
+                    {{{buttonSave}}}
                 </div>
             </div>
         </form>
