--- a/src/pages/chat/chat.scss
+++ b/src/pages/chat/chat.scss
@@ -2,6 +2,7 @@
     display: flex;
     height: 100%;
 }
+
 .chatlist-column {
     width: 400px;
     background-color: #fbfbfb;
@@ -11,8 +12,7 @@
     display: flex;
     flex-direction: column;
 }
-.sidebar {
-}
+
 .chatlist-header {
     display: flex;
     align-items: center;
@@ -21,6 +21,7 @@
     padding-bottom: 12px;
     border-bottom: 2px solid #efefef;
 }
+
 .profile-btn {
     background-color: #efefef;
     width: 60px;
@@ -29,22 +30,26 @@
     display: flex;
     align-items: center;
     justify-content: center;
+
     & img {
         max-width: 50%;
         max-height: 50%;
     }
 }
+
 .search {
     width: 100%;
     flex-shrink: 1;
     position: relative;
+
     & input {
         width: 100%;
         border: none;
         background-color: #efefef;
-        padding: 10px 10px;
+        padding: 10px;
         border-radius: 4px;
     }
+
     & button {
         background-color: transparent;
         border: none;
@@ -55,6 +60,7 @@
         cursor: pointer;
     }
 }
+
 .chatlist-items {
     // padding-top: 12px;
     // padding-bottom: 12px;
@@ -79,14 +85,13 @@
     border-bottom: 2px solid #efefef;
     padding-bottom: 12px;
 }
+
 .chat-info {
     display: flex;
     align-items: center;
-    // padding-top: 12px;
-    
     gap: 20px;
-    
 }
+
 .chat-info-img {
     width: 60px;
     height: 60px;
@@ -95,21 +100,19 @@
     align-items: center;
     justify-content: center;
     border-radius: 50%;
+
     & img {
         max-width: 50%;
         max-height: 50%;
     }
 }
-.chat-info-main {
 
-}
-.chat-utils {
-}
 .chat-wrapper {
     height: 100%;
     flex-shrink: 1;
     padding: 12px;
 }
+
 .chat-body {
     display: flex;
     flex-direction: column;
@@ -117,12 +120,14 @@
     gap: 14px;
     height: 100%;
 }
+
 .chat-date {
     background-color: #efefef;
     align-self: center;
     padding: 4px 14px;
     border-radius: 30px;
 }
+
 .chat-message {
     background-color: #efefef;
     align-self: flex-start;
@@ -132,24 +137,23 @@
     display: flex;
     flex-direction: column;
     gap: 6px;
+    
     &.owner {
         align-self: flex-end;
     }
-}
-.chat-message-text {
 }
 
 .chat-message-date {
     font-size: 12px;
     align-self: flex-end;
 }
-.chat-message-image {
-}
+
 .chat-input {
     padding-top: 12px;
     border-top: 2px solid #efefef;
     width: 100%;
     display: flex;
+
     & form {
         width: 100%;
         display: flex;
@@ -158,13 +162,16 @@
         margin-bottom: 0;
     }
 }
+
 .chat-input-attach {
     cursor: pointer;
 }
+
 .chat-input-field {
     width: 100%;
     flex-shrink: 1;
 }
+
 .chat-send {
     background: none;
     background-color: #3494fbce;
@@ -174,6 +181,7 @@
     height: 30px;
     transition: .3s;
     cursor: pointer;
+
     &:hover {
         background-color: #3494fb;
     }
