--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -1,12 +1,19 @@
+@import './auth/auth';
+@import './chat/chat';
+@import './error/error';
+@import './profile/profile';
+
 
 body {
     font-size: 18px;
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
 }
+
 * {
     flex-shrink: 0;
     box-sizing: border-box;
 }
+
 .form-wrapper {
     height: 100%;
     width: 100%;
@@ -14,24 +21,23 @@ body {
     align-items: center;
     justify-content: center;
 }
+
 .form {
     display: flex;
     flex-direction: column;
     align-items: center;
     padding: 20px;
-    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 0 10px 0 rgba(0 0 0 / 20%);
     border-radius: 6px;
     gap: 20px;
     width: 400px;
 }
+
 .form-title {
     font-size: 24px;
     font-weight: bold;
 }
+
 .form-buttons {
     margin-top: 100px;
 }
-@import './auth/auth.scss';
-@import './chat/chat.scss';
-@import './error/error.scss';
-@import './profile/profile.scss';
