--- a/src/components/chatlist-item/chatlist-item.hbs
+++ b/src/components/chatlist-item/chatlist-item.hbs
@@ -1,7 +1,7 @@
 <div class="chatlist-item">
     <div class="chatlist-item-cols">
         <div class="chatlist-item-image">
-            <img src="{{img}}" alt="">
+            <img src="{{img}}" alt="{{name}}">
         </div>
         <div class="chatlist-item-info">
             <div class="chatlist-item-name">
