--- a/src/pages/chat/chat.hbs
+++ b/src/pages/chat/chat.hbs
@@ -3,7 +3,7 @@
         <div class="chatlist-column sidebar">
             <div class="chatlist-header">
                 <a href="/profile/" class="profile-btn">
-                    <img src="{{ img.[profile.svg] }}" alt="">
+                    <img src="{{ img.[profile.svg] }}" alt="profile">
                 </a>
                 <div class="search">
                     <input type="text" placeholder="Поиск">
