--- a/src/pages/profile/edit/index.hbs
+++ b/src/pages/profile/edit/index.hbs
@@ -7,55 +7,20 @@
                 </div>
                 <div class="profile-name">Сергей</div>
                 <div class="profile-fields">
-                    <div class="profile-field">
+                    {{!-- <div class="profile-field">
                         <div class="profile-field-name">
                             Почта
                         </div>
                         <div class="profile-field-value">
                             {{{inputEmail}}}
                         </div>
-                    </div>
-                    <div class="profile-field">
-                        <div class="profile-field-name">
-                            Логин
-                        </div>
-                        <div class="profile-field-value">
-                            {{{inputLogin}}}
-                        </div>
-                    </div>
-                    <div class="profile-field">
-                        <div class="profile-field-name">
-                            Имя
-                        </div>
-                        <div class="profile-field-value">
-                            {{{inputFirstName}}}
-                        </div>
-                    </div>
-                    <div class="profile-field">
-                        <div class="profile-field-name">
-                            Фамилия
-                        </div>
-                        <div class="profile-field-value">
-                            {{{inputSecondName}}}
-                        </div>
-                    </div>
-                    <div class="profile-field">
-                        <div class="profile-field-name">
-                            Имя в чате
-                        </div>
-                        <div class="profile-field-value">
-                            {{{inputDisplayName}}}
-                        </div>
-                    </div>
-                    <div class="profile-field">
-                        <div class="profile-field-name">
-                            Телефон
-                        </div>
-                        <div class="profile-field-value">
-                            {{{inputPhone}}}
-                        </div>
-                    </div>
-                    
+                    </div> --}}
+                    {{{inputEmail}}}
+                    {{{inputLogin}}}
+                    {{{inputFirstName}}}
+                    {{{inputSecondName}}}
+                    {{{inputDisplayName}}}
+                    {{{inputPhone}}}
                 </div>
                 <div class="profile-buttons">
                     {{{buttonSave}}}
