--- a/src/pages/profile/profile.hbs
+++ b/src/pages/profile/profile.hbs
@@ -2,7 +2,7 @@
 	<div class="container profile-wrapper">
 		<div class="profile">
 			<div class="profile-image">
-				<img src="{{ img.[profile.svg] }}" alt="">
+				<img src="{{ img.[profile.svg] }}" alt="profile">
 			</div>
 			<div class="profile-name">Сергей</div>
 			<div class="profile-fields">
