--- a/src/components/form-group/form-group.hbs
+++ b/src/components/form-group/form-group.hbs
@@ -1,4 +1,4 @@
-<div class="form-group">
+<label class="{{{class}}}">
     <div class="form-group-title">
         {{title}}
     </div>
@@ -7,4 +7,4 @@
     {{/if}}
     
     {{{input}}}
-</div>
+</label>
