--- a/src/pages/profile/profile.scss
+++ b/src/pages/profile/profile.scss
@@ -34,13 +34,25 @@
     width: 100%;
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 40px;
 }
 
 .profile-field {
     display: flex;
     width: 100%;
     justify-content: space-between;
+    align-items: center;
+    position: relative;
+
+    .form-group-title {
+        font-size: 16px;
+    }
+    
+    .form-group-error {
+        flex-shrink: 1;
+        position: absolute;
+        bottom: 100%;
+    }
 }
 
 .profile-links {
